# SanitizeText

./: .gitignore  Cargo.toml  README.md
docs/: index.html
docs/assets/: sanitizetext-36c56cc32f5bb6ae.js  sanitizetext-36c56cc32f5bb6ae.js.br  sanitizetext-f3b2951c34d6a57e.js  sanitizetext-f3b2951c34d6a57e.js.br  sanitizetext_bg-036531f2054ee27a.wasm.br  sanitizetext_bg-7181a7dcece492cd.wasm  sanitizetext_bg-7181a7dcece492cd.wasm.br  sanitizetext_bg-c06a21abf6d1e13c.wasm  sanitizetext_bg-c06a21abf6d1e13c.wasm.br
docs/public/: index.html
docs/public/assets/: sanitizetext_bg-036531f2054ee27a.wasm
src/: lib.rs  main.rs
